Dibuat menggunakan Colab

--- a/Source_Code_Prediksi_Harga_Rumah_(2).ipynb
+++ b/Source_Code_Prediksi_Harga_Rumah_(2).ipynb
@@ -108,8 +108,7 @@
       ],
       "source": [
         "# ==============================================================\n",
-        "#  PREDIKSI HARGA RUMAH MENGGUNAKAN LINEAR REGRESSION (Sesuai Jurnal JATISI 2021)\n",
-        "#  Adaptasi dari Andi Saiful et al., \"Prediksi Harga Rumah Menggunakan Web Scrapping dan ML\"\n",
+        "#  PREDIKSI HARGA RUMAH MENGGUNAKAN LINEAR REGRESSION\n",
         "# ==============================================================\n",
         "\n",
         "%pip install openpyxl\n",
@@ -149,7 +148,7 @@
         "\n",
         "# Cetak hasil koefisien regresi\n",
         "print(\"\\n===================================================\")\n",
-        "print(\"🔹 HASIL PERHITUNGAN KOEFISIEN REGRESI LINEAR (MANUAL)\")\n",
+        "print(\"🔹 HASIL PERHITUNGAN KOEFISIEN REGRESI LINEAR\")\n",
         "print(\"===================================================\")\n",
         "print(f\"Intercept (β0) : {W[0]:.6f}\")\n",
         "for i, f in enumerate(fitur):\n",
@@ -201,7 +200,7 @@
       "cell_type": "code",
       "source": [
         "# ==============================================================\n",
-        "#  INPUT MANUAL UNTUK PREDIKSI RUMAH BARU (VERSI SEDERHANA)\n",
+        "#  INPUT MANUAL UNTUK PREDIKSI RUMAH BARU\n",
         "# ==============================================================\n",
         "\n",
         "print(\"\\n===================================================\")\n",
