Dibuat menggunakan Colab

--- a/Source_Code_Prediksi_Harga_Rumah_(2).ipynb
+++ b/Source_Code_Prediksi_Harga_Rumah_(2).ipynb
@@ -12,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "DsqUsuxjeUZd",
-        "outputId": "7213baf9-dfe2-46f4-a5dc-bbc44e45ad82"
+        "outputId": "f3e41781-9ea8-4de4-dad6-03cdb6d8f346"
       },
       "outputs": [
         {
@@ -63,7 +63,7 @@
             "1009  420  430   7   4    2  \n",
             "\n",
             "===================================================\n",
-            "🔹 HASIL PERHITUNGAN KOEFISIEN REGRESI LINEAR (MANUAL)\n",
+            "🔹 HASIL PERHITUNGAN KOEFISIEN REGRESI LINEAR\n",
             "===================================================\n",
             "Intercept (β0) : -741723247.584919\n",
             "LT         (β1) : 23659086.675935\n",
@@ -248,20 +248,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0jDFn9bMvsgk",
-        "outputId": "0b879587-ecd5-4a54-ff81-acf0762a648c"
+        "outputId": "ab2f43ed-0d7d-4d34-a437-0f80318177ff"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n",
             "===================================================\n",
             "🔹 PREDIKSI HARGA RUMAH BARU (INPUT MANUAL)\n",
+            "===================================================\n",
+            "Masukkan Luas Tanah (m²): 390\n",
+            "Masukkan Luas Bangunan (m²): 140\n",
+            "Masukkan Jumlah Kamar Tidur: 4\n",
+            "Masukkan Jumlah Kamar Mandi: 2\n",
+            "Masukkan Jumlah Garasi: 2\n",
+            "\n",
+            "===================================================\n",
+            "🔹 HASIL PREDIKSI RUMAH BARU\n",
+            "===================================================\n",
+            "Luas Tanah  : 390.0\n",
+            "Luas Bangunan: 140.0\n",
+            "Kamar Tidur : 4\n",
+            "Kamar Mandi : 2\n",
+            "Garasi      : 2\n",
+            "---------------------------------------------------\n",
+            "Prediksi Harga Rumah : Rp 9,262,790,409.22\n",
+            "Harga Asli Terdekat  : Rp 3,600,000,000.00\n",
+            "Selisih              : Rp 5,662,790,409.22\n",
+            "Persentase Error     : 157.30%\n",
+            "Akurasi Prediksi     : -57.30%\n",
             "===================================================\n"
           ]
         }
